--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,12 @@
     <string name="hard_mode">困难模式</string>
     <string name="help"></string>
     <string name="settings"></string>
-
+    <string name="Link">关卡</string>
+    <string name="Prop_Fight_Text">锤子</string>
+    <string name="Prop_Fight_Des">可以敲除一对\n可连接的emoji</string>
+    <string name="Prop_Bomb_Text">炸弹</string>
+    <string name="Prop_Bomb_Des">消除某个种类\n所有的emoji</string>
+    <string name="Prop_Refresh_Text">重排</string>
+    <string name="Prop_Refresh_Des">重新排列页面\n内的所有emoji</string>
+    <string name="ShowMoney">购买金币</string>
 </resources>
