--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">Android APP</string>
+    <string name="app_name">连连看</string>
     <string name="easy_mode">简单模式</string>
     <string name="normal_mode">普通模式</string>
     <string name="hard_mode">困难模式</string>
